--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Oskalovlev <111913579+Oskalovlev@users.noreply.github.com>"]
 readme = "README.md"
-packages = [{ include = "*", from = "src" },]
+packages = [{ include = "src" },]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -19,6 +19,7 @@ djangorestframework-simplejwt = "^5.3.0"
 gunicorn = "^21.2.0"
 pillow = "^10.1.0"
 psycopg2-binary = "^2.9.9"
+taskipy = "^1.12.0"
 
 
 [build-system]
@@ -39,3 +40,8 @@ flake8 = "6.1.0"
 pep8-naming = "0.13.3"
 flake8-return = "1.2.0"
 pytest = "^7.4.2"
+
+[tool.taskipy.tasks]
+app = "python src/backend/manage.py runserver"
+migrate = "python src/backend/manage.py migrate"
+makemigrations = "python src/backend/manage.py makemigrations user"
