Рефакторинг каталогов проекта

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ SECRET_KEY="SECRET_KEY"
 
 # Lockal DB
 DB_ENGINE=django.db.backends.postgresql
-DB_NAME=yatrack
+DB_NAME=emp_track
 PG_USER=postgres
 PG_PASSWORD=postgres
 DB_HOST=localhost
