--- a/infra-dev/docker-compose.yaml
+++ b/infra-dev/docker-compose.yaml
@@ -8,10 +8,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - ./.env.dev
 
   backend:
-    # image: oskalov/yatrack-back:latest
     build:
       context: ../src/backend
       dockerfile: Dockerfile
@@ -28,7 +27,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./.env
+      - ./.env.dev
 
   # frontend:
   #   image: frontend:latest
@@ -39,7 +38,6 @@ services:
 
   nginx:
     image: nginx:1.23.4-alpine
-    # restart: always
     ports:
       - "80:80"
     volumes:
